buildscript {
    repositories {
        jcenter()
    }

    dependencies {
        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
    }
}

plugins {
  id 'com.github.johnrengelman.shadow' version '5.1.0'
}

apply plugin: 'java'
apply plugin: 'maven'
apply plugin: 'eclipse'
apply plugin: 'application'

mainClassName = "net.yacy.grid.mcp.MCP"
applicationDefaultJvmArgs = ["-Xmx1024m"]

group = 'net.yacy'
version = '0.0.1-SNAPSHOT'

description = "YaCy Grid MCP"

sourceCompatibility = 1.8
targetCompatibility = 1.8

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

repositories {
     mavenCentral()
}

jar {
    manifest {
        attributes 'Main-Class': 'net.yacy.grid.mcp.MCP'
    }
}

shadowJar {
    mergeServiceFiles()

    from('conf') {
        into 'conf'
    }
}
assemble.dependsOn shadowJar

dependencies {
    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.+'
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.+'
    compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.+'
    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.+'
    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.+'
    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.+'
    compile group: 'org.mapdb', name: 'mapdb', version: '3.+'
    compile group: 'com.rabbitmq', name: 'amqp-client', version: '5.+'
    compile group: 'commons-net', name: 'commons-net', version: '3.+'
    compile group: 'jcifs', name: 'jcifs', version: '1.+'
    compile group: 'org.elasticsearch.client', name: 'transport', version: '6.8.+'
    compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.+'
    compile group: 'com.hazelcast', name: 'hazelcast', version: '4.1.+'
}
